Created buttons for UI in HTML.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   </head>
   <body>
     <h1 id="test">Password Generator</h1>
-    <input id="pwdInput type="text" name="" value="">
-    
+    <input id="pwdInput" type="text" name="" value="">
+    <button id="createPWD" type="submit">Create Password</button>
+    <button type="button">Copy</button>
     <script src="script.js"></script>
   </body>
 </html>
