Finished everything except the styling of the UI.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
   </head>
   <body>
     <h1 id="test">Password Generator</h1>
-    <input id="pwdInput" type="text" name="" value="">
-    <button id="createPWD" type="submit">Create Password</button>
-    <button type="button">Copy</button>
+    <input id="pwdInput" type="text" readonly>
+    <button id="createPwd" type="submit">Create Password</button>
+    <button id="copyPwd" type="button">Copy</button>
+    <h4 id="copyAlert"></h4>
     <script src="script.js"></script>
   </body>
 </html>
